[package]
name = "tortank"
version = "0.25.3"
edition = "2021"
authors = ["Nordine Bittich <contact@bittich.be>"]
description = "Turtle/N3 parser"
categories = ["database"]
license = "MIT"
homepage = "https://github.com/nbittich/tortank"
repository = "https://github.com/nbittich/tortank"

[dependencies]
nom = "7.1.3"
serde = "1.0.217"
serde_derive = "1.0.217"
uuid = { version = "1.11.0", features = ["v7"] }

serde_json = "1.0.134"
chrono = "0.4.39"

[profile.release]
opt-level = 'z'
codegen-units = 1
panic = 'abort'
strip = "symbols"
lto = "thin"

[dev-dependencies]
serial_test = "3.2.0"
test-case = "3.3.1"

