[package]
name = "tortank"
version = "0.30.3"
edition = "2024"
authors = ["Nordine Bittich <contact@bittich.be>"]
description = "Turtle/N3 parser"
categories = ["database"]
rust-version = "1.89"
license = "MIT"
homepage = "https://github.com/nbittich/tortank"
repository = "https://github.com/nbittich/tortank"

[dependencies]
nom = "8.0.0"
serde = "1.0.219"
serde_derive = "1.0.219"
uuid = { version = "1.17.0", features = ["v7"] }

serde_json = "1.0.140"
chrono = "0.4.41"
nom-language = "0.1.0"

[profile.release]
opt-level = 'z'
codegen-units = 1
panic = 'abort'
strip = "symbols"
lto = "thin"

[dev-dependencies]
serial_test = "3.2.0"
test-case = "3.3.1"
