[package]
name = "tortank"
version = "0.30.6"
edition = "2024"
authors = ["Nordine Bittich <contact@bittich.be>"]
description = "Turtle/N3 parser"
categories = ["database"]
rust-version = "1.90"
license = "MIT"
homepage = "https://github.com/nbittich/tortank"
repository = "https://github.com/nbittich/tortank"

[dependencies]
nom = "8.0.0"
serde = "1.0.228"
serde_derive = "1.0.228"
uuid = { version = "1.18.1", features = ["v7"] }

serde_json = "1.0.145"
chrono = "0.4.42"
nom-language = "0.1.0"

[profile.release]
opt-level = 'z'
codegen-units = 1
panic = 'abort'
strip = "symbols"
lto = "thin"

[dev-dependencies]
serial_test = "3.2.0"
test-case = "3.3.1"
